0.4.0:

    * Don't emit (unset) or (not a symlink) on stderr (#549498)
    * Fix mkdir die message in java-vm module
    * Sort java-vm targets in version order rather than alphanumeric
    * Fix showing and highlighting current ecj + mvn targets (#585224)
    * Fix insufficient quoting in java-vm module

0.3.0:

    * run-java-tool.bash.in: fix shellcheck issues
    * run-java-tool.bash.in: replace `which` with `command -v`

0.2.0:

    * Make run-java-tool POSIX-compliant
    * Utilise the VM's PATH variable in run-java-tool
    * Treat javaws as a special case in run-java-tool
    * Remove the java-nsplugin eselect module

0.1.0:

    * Support ROOT and Gentoo Prefix in java-vm and java-nsplugin
    * Add support for icedtea-web with selectable jvm to java-nsplugin
    * run-java-tool no longer installed in PATH
    * BGO227507: Remove unused code
    * BGO362745: Remove code in global scope
    * BGO398367: Return proper version infromation

0.0.0:

    * Import eselect modules "java-vm" and "java-nsplugin" as well as
      run-java-tool from java-config-2.1.12
    * Import eselect module "maven" from eselect-maven-0.2
    * import eselect module "ecj" from eselect-ecj-0.7
    * Write build system and auxilary files


vim: set ts=4 et cc=72 :